[package]
name = "wandbox"
version = "0.1.0"
description = "An api binding for Wandbox"
keywords = ["Wandbox"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["Michael Flaherty <michaelwflaherty@me.com>"]
readme = "README.md"
edition = "2018"
license = "LICENSE-LGPL3"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.*", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }