[package]
name = "wandbox"
version = "0.1.1"
description = "An api binding for Wandbox"
keywords = ["Wandbox"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["Michael Flaherty <michaelwflaherty@me.com>"]
readme = "README.md"
edition = "2018"
license = "LGPL-3.0"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.*", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros"] }